testdata/baselines/reference/compiler/emitReactJsxSelfClosingElement.errors.txt
a.tsx(1,13): error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
a.tsx(1,14): error TS2304: Cannot find name 'App'.


==== a.tsx (2 errors) ====
    local app = <App />;
                ~~~~~~~
!!! error TS2875: This JSX tag requires the module path 'react/jsx-runtime' to exist, but none could be found. Make sure you have types for the appropriate package installed.
                 ~~~
!!! error TS2304: Cannot find name 'App'.
    